--- a/buttonChanger/index.html
+++ b/buttonChanger/index.html
@@ -8,6 +8,9 @@
     <style>
       /* General body styling */
       body {
+        width: 800px;
+        height: 480px;
+        overflow: auto;
         font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
@@ -94,20 +97,8 @@
     <main class="container">
       <!-- Screen controller sections -->
       <section>
-        <h2>For Device</h2>
-        <button id="display-image-device">Display Image</button>
-        <button id="display-gif-device">Display GIF</button>
-      </section>
-      <section>
-        <h2>For Simulator</h2>
-        <button id="display-image-simulator">Display Image</button>
-        <button id="display-gif-simulator">Display GIF</button>
-      </section>
-
-      <section>
-        <h2>For Both</h2>
-        <button id="display-image-all">Display Image</button>
-        <button id="display-gif-all">Display GIF</button>
+        <button id="display-image">Display Image</button>
+        <button id="display-gif">Display GIF</button>
       </section>
     </main>
     <h1>Key Event Listener</h1>
@@ -121,7 +112,6 @@
       </ul>
     </section>
     <!-- Page footer -->
-    <footer>&copy; 2024 Screen Controller. All rights reserved.</footer>
     <!-- External script inclusion -->
     <script type="module" src="/src/main.ts"></script>
   </body>
